@@ -259,6 +259,7 @@ production.
   as the server name.
 * (bug 19725) Do not list suppressed edits in the "View X deleted edits" link
   if user cannot view suppressed edits.
+* The View X deleted revisions is now shown again on Special:Upload.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result.
